--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,8 +9,18 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <item name="font">@font/roboto</item>
+        <item name="fontFamily">@font/roboto</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    
+    <style name="ButtonLogin" parent="ThemeOverlay.Material3.Button">
+        <item name="backgroundTint">@color/biru_utama</item>
+        <item name="android:radius">10dp</item>
+
     </style>
 </resources>
