--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -81,6 +81,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed3" />
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/google"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/google_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sign" />
+
     <TextView
         android:id="@+id/tv_action_daftar"
         android:layout_width="wrap_content"
@@ -90,6 +100,6 @@
         android:text="@string/akun_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_sign" />
+        app:layout_constraintTop_toBottomOf="@+id/google" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
