--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="@string/text_label_email"
+        android:text="@string/username"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -119,7 +119,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="@string/text_label_password"
+        android:text="@string/password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/text_action_lupa_password"
+        android:text="Lupa Password?"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/ed2"
         app:layout_constraintTop_toBottomOf="@+id/ed2" />
@@ -154,7 +154,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="@string/text_label_login_descriptoon"
+        android:text="Get Technision Get Fix"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/img_logo"
         app:layout_constraintTop_toBottomOf="@+id/img_logo" />
