--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/pineLogo"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/pinelogo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/getfix_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
