--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     
     
-    <color name="biru_utama">#676FC4</color>
+    <color name="blue">#676FC4</color>
+    <color name="purple">#AB6DFD</color>
+    <color name="gray_text">#B3B4B8</color>
+    <color name="black_second">#595959</color>
 </resources>
